--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     </parent>
     <groupId>com.springframework</groupId>
     <artifactId>petclinic</artifactId>
-    <version>0.0.1</version>
+    <version>0.0.1-SNAPSHOT</version>
     <name>petclinic</name>
     <description>Spring Pet Clinic Web App</description>
 
@@ -45,7 +45,7 @@
     </build>
 
     <scm>
-        <developerConnection>scm:git:https://github.com/william1099/spring-pet-clinic.git</developerConnection>
+        <developerConnection>scm:git:git@github.com:william1099/spring-pet-clinic.git</developerConnection>
       <tag>petclinic-0.0.1</tag>
   </scm>
 
