[maven-release-plugin] prepare release petclinic-0.0.1

--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     </parent>
     <groupId>com.springframework</groupId>
     <artifactId>petclinic</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <name>petclinic</name>
     <description>Spring Pet Clinic Web App</description>
 
