--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
     </build>
 
     <scm>
-        <developerConnection>scm:git:git@github.com:william1099/spring-pet-clinic.git</developerConnection>
+        <developerConnection>scm:git:https://github.com/william1099/spring-pet-clinic.git</developerConnection>
       <tag>petclinic-0.0.1</tag>
   </scm>
 
