--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,14 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+           <plugin>
+               <groupId>org.apache.maven.plugins</groupId>
+               <artifactId>maven-release-plugin</artifactId>
+           </plugin>
         </plugins>
     </build>
 
+    <scm>
+        <developerConnection>scm:git:https://github.com/william1099/spring-pet-clinic.git</developerConnection>
+    </scm>
 </project>
