--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     </parent>
     <groupId>com.springframework</groupId>
     <artifactId>petclinic</artifactId>
-    <version>0.0.1</version>
+    <version>0.0.2-SNAPSHOT</version>
     <name>petclinic</name>
     <description>Spring Pet Clinic Web App</description>
 
@@ -47,7 +47,7 @@
 
     <scm>
         <developerConnection>scm:git:https://github.com/william1099/spring-pet-clinic.git</developerConnection>
-      <tag>petclinic-0.0.1</tag>
+      <tag>HEAD</tag>
   </scm>
 
 </project>
